# Big-Data-Analytics-LNU-Fall-2025

./: Lab1.ipynb  pyproject.toml
Lab1 - big data analytics/: Lab1.ipynb  pyproject.toml
Lab2 - applied analytics/: Lab2 - applied analytics.ipynb  main.py  pyproject.toml
Lab2 - big data analytics/: Lab2.ipynb  pyproject.toml
