[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dora",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mypy>=1.18.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]

[tool.uv.sources]
dora = { git = "https://github.com/NathanEpstein/Dora" }
