[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.3",
    "dora",
    "ipykernel>=6.30.1",
    "numba>=0.61.2",
    "pandas>=2.3.2",
    "setuptools>=80.9.0",
    "yfinance>=0.2.66",
]

[tool.uv.sources]
dora = { git = "https://github.com/NathanEpstein/Dora" }
